fix a z-index issue when dropdown is placed in header

--- a/css/base.css
+++ b/css/base.css
@@ -5763,15 +5763,13 @@ div[data-toggle="tile"] [data-ignore="tile"] {
 }
 .header a {
   color: inherit;
+  z-index: 1;
 }
 .header .dropdown-menu {
   border-radius: 2px;
 }
 .header .dropdown-menu a {
   color: rgba(0, 0, 0, 0.87);
-}
-.header .dropdown-toggle {
-  z-index: 1;
 }
 .header .dropdown-toggle:after {
   background-color: rgba(0, 0, 0, 0.3);
